// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Kostnader
    </div>
    <div
      className="show-for-desktop"
    >
      Kostnad
    </div>
    <div
      className="show-for-desktop"
    >
      Utgift (NOK)
    </div>
  </div>
  <div
    className="list-body"
  >
    <p>
      Ingen kostnader
    </p>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Kostnader
    </div>
    <div
      className="show-for-desktop"
    >
      Kostnad
    </div>
    <div
      className="show-for-desktop"
    >
      Utgift (NOK)
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={195}
      createdAt={0}
      description="Food"
      id="1"
      key="1"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={4500}
      createdAt={345600000}
      description="credit"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
